final entry continued

--- a/index.html
+++ b/index.html
@@ -1,10 +1,29 @@
 <!DOCTYPE html>
-<head>
+<html>
+    <head>
     <link href="css/style.css" rel="stylesheet">
-</head>
-<body>
-    <header>
-        <h2>Discover hidden places in the world around you</h2>
-    </header>
-    <button>Download Excusrion (Coming soon)</button>
-</body>
+    </head>
+    <body>
+        <header>
+        <h1>Discover hidden places in the world around you</h1>
+        </header>
+        <div>
+            <p>
+                <a>Download Excursion (Coming soon)</a></p></div>
+        <div><video src="resources/videos/iphone.mov">
+        Video not supported</video></div>
+        <section class="main">
+            <h1 class="title2">Your personal travel guide</h1>
+            <article><p>Excursion remembers places you like, and reccomends new points of interest around you.</p></article>
+            <div><p class="first-pic"><img src="resources/Images/camp.webp" /></p></div>
+            <div><p class="second-pic"><img src="resources/Images/phone.webp" /></p></div>
+
+
+        </section>
+        <footer>
+            <h1 class ="footer">Coming Soon for IPhone and Android</h1>
+            <div><p><a>Download Excursion (Coming soon)</a></p></div>
+            <p class="BLogo">Excursion</p>
+        </footer>
+    </body>
+</html>
